@@ -15,6 +15,7 @@
  * validate compression parameters on add/update of the ColumnFamily (CASSANDRA-3573)
  * fix compression "chunk_length_kb" option to set correct kb value for thrift/avro
    (CASSANDRA-3558)
+ * fix missing response during range slice repair (CASSANDRA-3551)
 Merged from 0.8:
  * use cannonical host for local node in nodetool info (CASSANDRA-3556)
  * remove nonlocal DC write optimization since it only worked with
